--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,17 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <id>my-execution</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <includePluginDependencies>true</includePluginDependencies>
                     <mainClass>kpi.acts.appz.bot.hellobot.HelloWorldBot</mainClass>
                 </configuration>
             </plugin>
