--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,13 @@
     <properties>
         <telegram.version>4.1</telegram.version>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+    </dependencies>    
     <build>
         <plugins>
             <plugin>
