--- a/pom.xml
+++ b/pom.xml
@@ -17,38 +17,24 @@
     <properties>
         <telegram.version>4.1</telegram.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-    </dependencies>    
+   
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <id>my-execution</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
+                    <includePluginDependencies>true</includePluginDependencies>
                     <mainClass>kpi.acts.appz.bot.hellobot.HelloWorldBot</mainClass>
                 </configuration>
             </plugin>
